# aether_docs

./: .env.example  README.md  database.py  embeddings.py  pyproject.toml  test_mcp.py
agent/: builder.py  parser.py  query.py  state.py
data/: graph.db
mcp_server/: server.py
ui/: app.py
