[project]
name = "aether-docs"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "langchain>=1.3.2",
    "langchain-deepseek>=1.0.1",
    "langgraph>=1.2.2",
    "mcp>=1.27.2",
    "numpy>=2.4.6",
    "pandas>=3.0.3",
    "python-dotenv>=1.2.2",
    "pyvis>=0.3.2",
    "sentence-transformers>=5.5.1",
    "streamlit>=1.58.0",
]
